# cmake_test

t1/: CMakeLists.txt  CMakeLists.txt~  main.cpp
t2/: CMakeLists.txt  CMakeLists.txt~
t2/doc/: hello.txt  hello.txt~
t2/src/: CMakeLists.txt  CMakeLists.txt~
t3/: CMakeLists.txt  CMakeLists.txt~  hello.cpp  hello.h
t3/lib/: libhello.so.1.2
t4/: CMakeLists.txt
t4/src/: CMakeLists.txt  CMakeLists.txt~  main.cpp
t5/: CMakeLists.txt  CMakeLists.txt~
t5/src/: CMakeLists.txt  CMakeLists.txt~  main.cpp  main.cpp~
t6/: CMakeLists.txt  CMakeLists.txt~
t6/cmake/: FindHELLO.cmake  FindHELLO.cmake~  FindHello.cmake~
t6/src/: CMakeLists.txt  CMakeLists.txt~  main.cpp
